--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "babel-plugin-styled-components": "^1.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "browserslist": "^4.5.5",
+    "c-delta-organization-settings": "git+https://github.com/ideo/c-delta-organization-settings.git",
     "caniuse-lite": "^1.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "color": "^3.1.2",
