Setting up date range calendar picker on collection cover

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "@babel/preset-env": "^7.7.0",
     "@babel/preset-react": "^7.7.0",
     "@firebase/app-types": "^0.3.2",
-    "@material-ui/core": "^1.5",
+    "@material-ui/core": "^4.9",
+    "@material-ui/pickers": "^4.0.0-alpha.7",
     "@rails/webpacker": "4.2.2",
     "@sentry/browser": "^5.4.0",
     "@sentry/webpack-plugin": "^1.6.2",
