--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "jest-enzyme": "^7.0.0",
     "jest-fetch-mock": "^1.4.1",
     "jest-localstorage-mock": "^2.2.0",
+    "jest-react-hooks-shallow": "^1.4.1",
     "react-router-enzyme-context": "^1.2.0",
     "react-styleguidist": "^9.0.0",
     "react-test-renderer": "^16.8.0",
