remove react-dropzone; upgrade filestack library

--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "draft-js-plugins-editor": "^2.0.8",
     "element-matches-polyfill": "^1.0.0",
     "file-loader": "^4.0.0",
-    "filestack-js": "^0.11.2",
+    "filestack-js": "3.16.0",
     "firebase": "^5.0.4",
     "formik": "0.11.11",
     "get-video-id": "^3.0.0",
@@ -152,7 +152,6 @@
     "react-docgen-typescript": "^1.9.1",
     "react-dom": "16.8.6",
     "react-dotdotdot": "^1.2.3",
-    "react-dropzone": "^11.0.3",
     "react-flip-move": "^3.0.3",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.1",
