allow both onMouseMove and onTouchStart to call this.onCursorMove
- because we can't be certain that uiStore.isTouchDevice is correct, it 
is ok to call the event in both cases. Worst case it will 
setHoveringRowCal on the same row/col again, which just returns null 
anyway

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "identity-obj-proxy": "^3.0.0",
     "ideo-sso-js-sdk": "ideo/sso-js-sdk#v2.1.6",
     "if-emoji": "^0.1.0",
+    "is-touch-device": "^1.0.1",
     "jest-styled-components": "7.0.0-2",
     "js-cookie": "^2.2.1",
     "linkifyjs": "^2.1.8",
