--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "mobx-react": "^5.4.4",
     "mobx-react-router": "^4.0.4",
     "moment-mini": "^2.19.4",
+    "navigator.sendbeacon": "^0.0.20",
     "page-metadata-parser": "^1.1.2",
     "papaparse": "^5.2.0",
     "parameterize": "^0.1.0",
