WIP: focus on create, etc.

--- a/package.json
+++ b/package.json
@@ -98,7 +98,6 @@
     "babel-plugin-styled-components": "^1.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "browserslist": "^4.5.5",
-    "c-delta-organization-settings": "/Users/mvillwock/projects/c-delta-organization-settings",
     "caniuse-lite": "^1.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "color": "^3.1.2",
@@ -130,9 +129,11 @@
     "linkifyjs": "^2.1.8",
     "lodash": "~4.17.4",
     "mime-types": "^2.1.19",
-    "mobx": "^4.4.0",
+    "mobx": "5.9.4",
     "mobx-localstorage": "^1.0.0",
     "mobx-react": "^5.4.4",
+    "mobx-rest": "^7.1.0",
+    "mobx-rest-jquery-adapter": "^1.1.0",
     "mobx-react-router": "^4.0.4",
     "moment-mini": "^2.19.4",
     "page-metadata-parser": "^1.1.2",
