add json pre-commit lint; fix collection card rspec

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,6 +7,10 @@ pre-commit:
       glob: "*.js"
       exclude: '__tests__/ui/grid/__snapshots__/*'
       run: yarn run lint --fix {files}
+    lint-json:
+      files: git diff --name-only development
+      glob: "*.json"
+      run: yarn run lint --fix {files}
     rubocop:
       files: git diff --name-only development
       # exclude: "excluded_filename.rb"
