--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^21.7.0",
+    "eslint-plugin-json": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "~5.1.1",
     "eslint-plugin-prettier": "^2.6.2",
