--- a/package.json
+++ b/package.json
@@ -188,8 +188,8 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "cypress": "3.4.1",
-    "cypress-cucumber-preprocessor": "^1.16.0",
+    "cypress": "5.5.0",
+    "cypress-cucumber-preprocessor": "4.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.3",
